--- a/css/simple-sidebar.css
+++ b/css/simple-sidebar.css
@@ -51,6 +51,8 @@
 /* Sidebar Styles */
 
 .sidebar-nav {
+    /*position: absolute;*/
+    top: 0;
     width: 250px;
     margin: 0;
     padding: 0;
@@ -75,9 +77,8 @@
 }
 
 .sidebar-nav li a:active,
-.sidebar-nav li a:focus, 
-.sidebar-nav li a.active  {
-    color: #fff;
+.sidebar-nav li a:focus {
+    text-decoration: none;
 }
 
 .sidebar-nav > .sidebar-brand {
