--- a/css/style.css
+++ b/css/style.css
@@ -12,6 +12,10 @@
   margin-bottom: 0;
 }
 
+#menu-toggle {
+  margin-top: 10px;
+  margin-left: 10px;
+}
 #hippo {
 	display: block;
 	margin-left: auto;
@@ -20,6 +24,10 @@
   max-width: 50%;
   border: 2px solid red;
   border-radius: 20px;
+}
+
+#myCarousel {
+  margin: -20px;
 }
 
 .carousel-caption {
@@ -56,7 +64,8 @@
 /*#slide-2 .bcg {background-image:url('../img/bcg_slide-2.jpg')}*/
 #slide-2 .carousel-caption {
   margin-left: -450px;
-  bottom: 200px;
+  margin-top: 50px;
+  /*bottom: 200px;*/
   top: auto;
 }
 
