--- a/css/style.css
+++ b/css/style.css
@@ -16,6 +16,7 @@
   margin-top: 10px;
   margin-left: 10px;
 }
+
 #hippo {
 	display: block;
 	margin-left: auto;
@@ -24,6 +25,22 @@
   max-width: 50%;
   border: 2px solid red;
   border-radius: 20px;
+}
+
+.video-container {
+    position: relative;
+    padding-bottom: 56.25%;
+    padding-top: 35px;
+    height: 0;
+    overflow: hidden;
+}
+
+.video-container iframe {
+    position: absolute;
+    top:0;
+    left: 0;
+    width: 100%;
+    height: 100%;
 }
 
 #myCarousel {
