--- a/_includes/headerAndLeftNav.html
+++ b/_includes/headerAndLeftNav.html
@@ -6,16 +6,16 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="description" content="">
+  <meta name="description" content="{{ site.description }}">
   <meta name="author" content="">
 
-  <title>PurpleHey - 'Cuse me while I think out loud</title>
+  <title>{{ site.name }}</title>
 
   <!-- Bootstrap Core CSS -->
-  <link href="css/bootstrap.min.css" rel="stylesheet">
+  <link href="/css/bootstrap.min.css" rel="stylesheet">
 
   <!-- Custom CSS -->
-  <link href="css/simple-sidebar.css" rel="stylesheet">
+  <link href="/css/simple-sidebar.css" rel="stylesheet">
 
   <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
   <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -24,7 +24,7 @@
       <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
   <![endif]-->
 
-  <link href="css/style.css" rel="stylesheet">
+  <link href="/css/style.css" rel="stylesheet">
 </head>
 
 <body>
@@ -35,6 +35,7 @@
     <nav class="navbar navbar-wrapper navbar-inverse navbar-fixed-top" role="navigation">
       <a href="#menu-toggle" class="btn btn-default" id="menu-toggle"><span class="glyphicon glyphicon-menu-hamburger"></span></a>
     </nav>
+   <!-- /.navbar -->
  
     <!-- Sidebar -->
     <div id="wrapper">
@@ -44,54 +45,25 @@
         </div>
         <ul class="sidebar-nav">
           <li class="sidebar-brand">
-            <a class="active" href="#home">
+            <a class="active" href="/">
                 W. Wesley Monroe
             </a>
           </li>
           <li>
-              <a href="#blog">Blog</a>
+              <a href="/pages/about.html">About</a>
           </li>
           <li>
-              <a href="#about">About</a>
+              <a href="/pages/projects.html">Projects</a>
           </li>
           <li>
-              <a href="#contact">Contact</a>
+              <a href="/pages/contact.html">Contact</a>
           </li>
           <li>
-              <a href="#medium">Medium</a>
+              <a href="/pages/medium.html">Medium</a>
           </li>
           <li>
-              <a href="https://twitter.com/purplehey">@purpleHey</a>
+              <a target="_blank" href="https://twitter.com/purplehey">@purpleHey</a>
           </li>
         </ul>
     </div>
     <!-- /#sidebar-wrapper -->
-
-      <!-- Page Content -->
-      <div id="page-content-wrapper">
-          <!-- content to go here -->
-
-      </div>
-      <!-- /#page-content-wrapper -->
-
-  </div>
-
-   <!-- /.navbar -->
-
-  <!-- jQuery -->
-  <script src="js/jquery.js"></script>
-
-  <script>
-  $("#menu-toggle").click(function(e) {
-      e.preventDefault();
-      $("#wrapper").toggleClass("toggled");
-  });
-  </script>
-
-  <!-- Bootstrap Core JavaScript -->
-  <script src="js/bootstrap.min.js"></script>
-  <script src="js/app.js"></script>
-
-</body>
-
-</html>
