--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,6 +2,8 @@
 
 	<div class="row-fluid">
 	  <div class="col-md-8">
+	  	<h2>{{ page.title }}</h2>
+	  	<p class="muted">{{ page.date | date_to_long_string }}</p>
 	      {{ content }}    
 	  </div>
 	  <div class="col-md-4">
